Bug 322784 - n900 version: No way to turn off kinect scrolling anymore
Summary: n900 version: No way to turn off kinect scrolling anymore
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-24 19:42 UTC by tomj
Modified: 2013-11-22 23:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.7.0 (KDE 4.12.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomj 2013-07-24 19:42:55 UTC
Hi,

it's currently not possible anymore to turn of kinect scrolling in the UI for the maemo version.

A recent refactoring ( https://git.reviewboard.kde.org/r/108046/ )
made kinect scrolling configurable in the options dialog. Unfortunately there is no
options dialog on the N900. You have to tweak the config file directly if you want to change it.

This only affects git HEAD, the last released version still has the button.

We should either bring the main menu button back
or create a stripped down options dialog tailored for the N900 / mobile version.

Cheers,
Thomas


Reproducible: Always
Comment 1 Bernhard Beschow 2013-11-22 23:02:07 UTC
Git commit d3ba3c138e6d1bb20c71cdb086be1e3d57a7bb5f by Bernhard Beschow.
Committed on 22/11/2013 at 12:57.
Pushed by beschow into branch 'KDE/4.12'.

bring back action to toggle kinetic scrolling
FIXED-IN: 1.7.0 (KDE 4.12.0)

(cherry picked from commit 491b8d18de77dbd199b146178b6e2d74776ab474)

M  +12   -1    src/apps/marble-mobile/MobileMainWindow.cpp
M  +2    -0    src/apps/marble-mobile/MobileMainWindow.h

http://commits.kde.org/marble/d3ba3c138e6d1bb20c71cdb086be1e3d57a7bb5f