bring back action to toggle kinetic scrolling

BUG: 322784
FIXED-IN: 1.7.0 (KDE 4.12.0)

(cherry picked from commit 491b8d18de77dbd199b146178b6e2d74776ab474)